<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".ui.auth.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Header Image -->
        <ImageView
            android:id="@+id/ivHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_header_height"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/onboarding_1" />

        <!-- White Card -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/login_card_overlap"
            android:background="@drawable/bg_login_card"
            android:padding="@dimen/login_horizontal_padding">

            <LinearLayout
                android:id="@+id/layoutContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Railora Logo -->
                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="@dimen/login_logo_size"
                    android:layout_height="@dimen/login_logo_size"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/railora_logo_blue" />

                <!-- Enter Your Details -->
                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/RailoraLoginTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/spacing_sm"
                    android:text="@string/create_account" />

                <!-- Full Name -->
                <TextView
                    style="@style/RailoraLoginLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_lg"
                    android:text="@string/full_name" />

                <EditText
                    android:id="@+id/etFullName"
                    style="@style/RailoraLoginInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_input_height"
                    android:layout_marginTop="@dimen/spacing_sm"
                    android:background="@drawable/bg_login_input"
                    android:hint="@string/enter_full_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/spacing_md" />

                <!-- Aadhaar Number -->
                <TextView
                    style="@style/RailoraLoginLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_md"
                    android:text="@string/aadhaar_number" />

                <EditText
                    android:id="@+id/etAadhaar"
                    style="@style/RailoraLoginInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_input_height"
                    android:layout_marginTop="@dimen/spacing_sm"
                    android:background="@drawable/bg_login_input"
                    android:hint="@string/enter_aadhaar_number"
                    android:inputType="number"
                    android:maxLength="12"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/spacing_md" />

                <!-- Date of Birth -->
                <TextView
                    style="@style/RailoraLoginLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_md"
                    android:text="@string/date_of_birth" />

                <EditText
                    android:id="@+id/etDob"
                    style="@style/RailoraLoginInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_input_height"
                    android:layout_marginTop="@dimen/spacing_sm"
                    android:background="@drawable/bg_login_input"
                    android:hint="@string/enter_date_of_birth"
                    android:focusable="false"
                    android:clickable="true"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/spacing_md" />

                <!-- Email -->
                <TextView
                    style="@style/RailoraLoginLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_md"
                    android:text="@string/email_address" />

                <EditText
                    android:id="@+id/etEmail"
                    style="@style/RailoraLoginInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_input_height"
                    android:layout_marginTop="@dimen/spacing_sm"
                    android:background="@drawable/bg_login_input"
                    android:hint="@string/enter_email_address"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/spacing_md" />

                <!-- Phone Number -->

                <TextView
                    style="@style/RailoraLoginLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_md"
                    android:text="@string/phone_number" />

                <EditText
                    android:id="@+id/etPhoneNumber"
                    style="@style/RailoraLoginInput"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_input_height"
                    android:layout_marginTop="@dimen/spacing_sm"
                    android:background="@drawable/bg_login_input"
                    android:hint="@string/enter_phone_number"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/spacing_md" />

                <!-- Password -->
                <TextView
                    style="@style/RailoraLoginLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_md"
                    android:text="@string/password" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_sm">

                    <EditText
                        android:id="@+id/etPassword"
                        style="@style/RailoraLoginInput"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_input_height"
                        android:background="@drawable/bg_login_input"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingHorizontal="@dimen/spacing_md"
                        android:paddingEnd="48dp"/>

                    <ImageView
                        android:id="@+id/ivPasswordToggle"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="12dp"
                        android:alpha="0.5"
                        android:src="@drawable/ic_eye"/>

                </RelativeLayout>

                <!-- Confirm Password -->
                <TextView
                    style="@style/RailoraLoginLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_md"
                    android:text="@string/confirm_password" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_sm">

                    <EditText
                        android:id="@+id/etConfirmPassword"
                        style="@style/RailoraLoginInput"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_input_height"
                        android:background="@drawable/bg_login_input"
                        android:hint="@string/enter_confirm_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingHorizontal="@dimen/spacing_md"
                        android:paddingEnd="48dp"/>

                    <ImageView
                        android:id="@+id/ivConfirmPasswordToggle"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="12dp"
                        android:alpha="0.5"
                        android:src="@drawable/ic_eye"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/btnCreateAccount"
                    style="@style/RailoraLoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_button_height"
                    android:layout_marginTop="@dimen/spacing_lg"
                    android:background="@drawable/bg_login_button"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/create_account"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutFooter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/spacing_lg"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/layoutContent"
                android:orientation="horizontal">

                <TextView
                    style="@style/RailoraLoginFooter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_account" />

                <TextView
                    android:id="@+id/tvLogin"
                    style="@style/RailoraLoginFooter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/footer_spacing"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/login"
                    android:textColor="@color/login_title_blue" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>