<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/home_background">

    <TextView
        android:id="@+id/tvJourneyRoute"
        style="@style/RailoraHomeHeaderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_md"
        android:layout_marginTop="@dimen/spacing_md"
        android:text="@string/journey_route"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/layoutDates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_md">

        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_md"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSortBy"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_search_filter"
            android:gravity="center"
            android:text="@string/sort_by"/>

        <TextView
            android:id="@+id/tvClassFilter"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/spacing_sm"
            android:background="@drawable/bg_search_filter"
            android:gravity="center"
            android:text="@string/sleeper"/>

        <TextView
            android:id="@+id/tvQuotaFilter"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/spacing_sm"
            android:background="@drawable/bg_search_filter"
            android:gravity="center"
            android:text="@string/quota"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTrainResults"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/spacing_md"/>

</LinearLayout>